--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             {
                 image: false, 
                 content: `
-                    "Dear Dad, your unwavering support and belief in me have been the cornerstone of my journey as a student. Today, I celebrate not just your role as a father but also as my guiding light. Happy Father's Day!"
+                    "Dear Dad, aapka support and belief in me have been the importaint part of my journey as a student. Today, I celebrate not just your role as a father but also as my guiding light. Happy Father's Day!"
                 `
             },
             {
                 image: false, 
                 content: `
-                "Thank you for believing in me when no one else did, and for supporting me when others doubted. I may not have achieved something monumental yet, but I know one day you'll proudly say, 'That's my son who has achieved something great.'"
+                "Thank you for believing in me when no one else did, and for supporting me when others doubted. I may not have achieved something very big yet, but I know one day you'll proudly say, 'That's my son who has achieved something great.'"
                 `
             },
             {
                 image: false, 
                 content: `
-                "I'm not proud of having a lawyer or judge in my family; I'm prouder of your hard work and self-learning. I believe a warrior isn't defined by their job but by their ability to fight through tough circumstances, a quality you exemplify. Times were undoubtedly tough when you faced MLM scams and couldn't graduate, among other struggles. Yet, you persevered, never giving up, and never letting our family lack anything. 'I'm proud of you, Dad,' and I know one day you'll be proud of me too. No matter what anyone says, I'll stand by you until the end. I'm your support!"
+                "I'm not proud of having a lawyer or judge in my family; I'm more proud of your hard work and self-learning. I believe a warrior is not defined by their job but by their ability to fight through tough circumstances, a quality you jo aapme hai. Times were undoubtedly tough when you faced MLM scams and could not graduate, and many more problems. Yet, aap ade rahe, give up nahi kiya, and never letting our family lack anything. 'I'm proud of you, Dad,' and I know one day you'll be proud of me too. No matter what anyone says, I'll stand by you until the end. I'm your support!"
                 `
             },
         ]
